Fix List Card overflow

--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -113,6 +113,8 @@
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    height: 12rem;
+    overflow: hidden;
   }
 
   span {
